<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.UserDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgUserPhoto"
            android:layout_width="125dp"
            android:layout_height="125dp"
            tools:src="@tools:sample/avatars"
            app:civ_border_width="2dp"
            android:layout_marginTop="30dp"
            app:civ_border_color="@color/darker_blue"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="26sp"
            tools:text="@string/name"
            app:layout_constraintTop_toBottomOf="@+id/imgUserPhoto"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tvUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="18sp"
            tools:text="@string/username"
            app:layout_constraintTop_toBottomOf="@+id/tvName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tvFollowers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            tools:text="@string/followers"
            app:layout_constraintTop_toBottomOf="@+id/tvUser"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tvRepositories"/>

        <View
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="16dp"
            android:background="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/tvUser"
            app:layout_constraintStart_toEndOf="@+id/tvFollowers"
            app:layout_constraintEnd_toStartOf="@+id/tvRepositories" />

        <TextView
            android:id="@+id/tvRepositories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            tools:text="@string/repositories"
            app:layout_constraintTop_toBottomOf="@+id/tvUser"
            app:layout_constraintStart_toEndOf="@+id/tvFollowers"
            app:layout_constraintEnd_toStartOf="@+id/tvFollowing" />

        <View
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="16dp"
            android:background="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/tvUser"
            app:layout_constraintStart_toEndOf="@+id/tvRepositories"
            app:layout_constraintEnd_toStartOf="@+id/tvFollowing" />

        <TextView
            android:id="@+id/tvFollowing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            tools:text="@string/following"
            app:layout_constraintTop_toBottomOf="@+id/tvUser"
            app:layout_constraintStart_toEndOf="@+id/tvRepositories"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/verticalGuideline"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="@+id/imgUserPhoto"
            app:layout_constraintBottom_toBottomOf="@+id/imgUserPhoto"
            app:layout_constraintStart_toStartOf="@+id/verticalGuideline"
            app:layout_constraintEnd_toEndOf="@+id/verticalGuideline"
            tools:visibility="visible" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tvRepositories"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/tab_layout" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="0dp"
            android:layout_height="350dp"
            app:layout_constraintTop_toBottomOf="@+id/tabLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:src="@drawable/ic_favorite_border"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/favorite" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
