<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.SettingActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/switch_theme"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/switchTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imgLightMode"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:src="@drawable/ic_light_mode_light"
        app:layout_constraintBottom_toBottomOf="@+id/switchTheme"
        app:layout_constraintEnd_toStartOf="@+id/switchTheme"
        app:layout_constraintTop_toTopOf="@+id/switchTheme"
        android:layout_marginEnd="40dp"
        android:contentDescription="@string/light_mode" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/light_mode"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/imgLightMode"
        app:layout_constraintStart_toStartOf="@+id/imgLightMode"
        app:layout_constraintEnd_toEndOf="@+id/imgLightMode" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="2"
        android:scaleY="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgDarkMode"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:src="@drawable/ic_dark_mode_light"
        app:layout_constraintBottom_toBottomOf="@+id/switchTheme"
        app:layout_constraintStart_toEndOf="@+id/switchTheme"
        app:layout_constraintTop_toTopOf="@+id/switchTheme"
        android:layout_marginStart="40dp"
        android:contentDescription="@string/dark_mode" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/dark_mode"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/imgDarkMode"
        app:layout_constraintStart_toStartOf="@+id/imgDarkMode"
        app:layout_constraintEnd_toEndOf="@+id/imgDarkMode" />


</androidx.constraintlayout.widget.ConstraintLayout>